<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/actions">
        <item
            android:id="@+id/action_delete_all"
            android:icon="@drawable/ic_delete_sweep_24dp"
            android:title="@string/action_delete_all"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/settings">
        <item
            android:id="@+id/action_events"
            android:icon="@drawable/ic_event_note_24dp"
            android:title="@string/events_title"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings_title"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/about_title"
            app:showAsAction="never" />
    </group>
</menu>