<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/onboarding_configure_title"
            android:textAppearance="@style/ThunderScout.TitleTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/onboarding_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:text="@string/onboarding_configure_device_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboarding_title" />

        <TextView
            android:id="@+id/onboarding_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:text="@string/onboarding_configure_usage"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_device_name_edit_text" />

        <TextView
            android:id="@+id/onboarding_caption_match_scouting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:text="@string/onboarding_configure_match_scouting"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_usage" />

        <TextView
            android:id="@+id/onboarding_caption_bluetooth_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/onboarding_configure_bt_server"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="@+id/onboarding_caption_match_scouting"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_caption_match_scouting" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/action_back"
            android:textAppearance="@style/ThunderScout.ButtonTextAppearance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/action_next"
            android:textAppearance="@style/ThunderScout.ButtonTextAppearance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_match_scouting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/onboarding_caption_match_scouting"
            app:layout_constraintStart_toEndOf="@+id/onboarding_caption_match_scouting"
            app:layout_constraintTop_toTopOf="@+id/onboarding_caption_match_scouting" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_bluetooth_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/onboarding_caption_bluetooth_server"
            app:layout_constraintStart_toEndOf="@+id/onboarding_caption_bluetooth_server"
            app:layout_constraintTop_toTopOf="@+id/onboarding_caption_bluetooth_server" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/onboarding_device_name_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/onboarding_configure_device_name_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_device_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textCapWords"
                android:text="@={deviceName}" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="deviceName"
            type="String" />
    </data>
</layout>