<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_alliance_station"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/alliance_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.allianceStation.getFriendlyName()}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="~~~" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alliance_station" />

        <TextView
            android:id="@+id/date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@{data.dateCreated}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alliance_station"
            tools:text="~~~" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_source"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_created" />

        <TextView
            android:id="@+id/source_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.sourceDevice}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_created"
            tools:text="~~~" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="data"
            type="dev.chara.thunderscout.model.ScoutData" />
    </data>

</layout>